--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -21,6 +21,7 @@
   --color-twitter: rgb(29, 161, 242);
   --color-twitter-hover: rgba(29, 161, 242, 0.8);
   --side-offset: 6rem;
+  --header-top-offset: 5rem;
   --border-radius-small: 3px;
   --border-radius-large: 6px;
 
@@ -75,11 +76,13 @@
 }
 @media (max-width: 860px) {
   :root {
+    --header-top-offset: 2rem;
     --side-offset: 1.5rem;
   }
 }
 @media (max-width: 640px) {
   :root {
+    --header-top-offset: 1rem;
     font-size: 130%;
   }
 }
@@ -218,22 +221,38 @@ a {
 
 /* Modal */
 
+.popup__top {
+  top: -webkit-calc(var(--header-top-offset) + 65px);
+  top: -moz-calc(var(--header-top-offset) + 65px);
+  top: calc(var(--header-top-offset) + 65px);
+  right: var(--side-offset);
+}
+@media (max-width: 860px) {
+  .popup__top {
+    top: -webkit-calc(var(--header-top-offset) + 65px);
+    top: -moz-calc(var(--header-top-offset) + 65px);
+    top: calc(var(--header-top-offset) + 65px);
+  }
+}
+@media (max-width: 640px) {
+  .popup__top {
+    top: -webkit-calc(var(--header-top-offset) + 65px);
+    top: -moz-calc(var(--header-top-offset) + 65px);
+    top: calc(var(--header-top-offset) + 65px);
+  }
+}
+
 .popup-trigger {
   display: inline-block;
 }
 
 .popup_modal {
-  height: 365px;
-  width: 650px;
   background-color: #fff;
   position: absolute;
-  left: 55%;
-  top: 25%;
-  padding: 45px;
-  transition: all 300ms ease-in-out;
   border: 0.1rem solid var(--color-button-border);
-  box-shadow: 2px 2px;
   z-index: 2011;
+  background-color: var(--color-background);
+  border-radius: var(--border-radius-large);
 }
 
 .popup__close {
@@ -247,11 +266,34 @@ a {
   pointer-events: auto;
 }
 
+/* Extensions */
+.extensions__table {
+  font-family: var(--font-family-stylized);
+  font-size: 0.9rem;
+  border-radius: var(--border-radius-large);
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+.extensions__table tr:nth-child(odd) {
+  color: var(--color-text-default);
+  background-color: var(--color-background);
+}
+
+.extensions__table tr:nth-child(even) {
+  color: var(--color-background);
+  background-color: var(--color-text-default);
+}
+
+.extensions__table td {
+  padding: 0.2rem;
+}
+
 /* Header */
 
 .header {
   background-color: var(--color-background);
-  padding: 5rem var(--side-offset);
+  padding: var(--header-top-offset) var(--side-offset);
   z-index: 10;
 }
 @media (max-width: 860px) {
