fixed titles in menu

--- a/public/index.pug
+++ b/public/index.pug
@@ -37,7 +37,7 @@ html(lang="en-US")
             svg(viewBox="0 0 24 24")
               use(href="./images/sprite.svg#menu-npm")
         li(class="header__list-item")
-          a(class="header__list-icon" title="packagist" href="https://packagist.org/packages/simple-icons/simple-icons")
+          a(class="header__list-icon" title="Packagist" href="https://packagist.org/packages/simple-icons/simple-icons")
             svg(viewBox="0 0 24 24")
               use(href="./images/sprite.svg#menu-packagist")
         li(class="header__list-item")
@@ -53,7 +53,7 @@ html(lang="en-US")
             svg(viewBox="0 0 24 24")
               use(href="./images/sprite.svg#menu-open-collective")
         li(class="header__list-item")
-          a(class="header__list-icon" title="Legal disclaimer" href="https://github.com/simple-icons/simple-icons/blob/master/DISCLAIMER.md")
+          a(class="header__list-icon" title="Legal Disclaimer" href="https://github.com/simple-icons/simple-icons/blob/master/DISCLAIMER.md")
             svg(viewBox="0 0 24 24")
               use(href="./images/sprite.svg#menu-legal-disclaimer")
       h1(class="header__title") Simple Icons
