removed .control__button__download

--- a/public/index.pug
+++ b/public/index.pug
@@ -152,7 +152,7 @@ html(lang="en-US")
                 disabled
               ) ##{icon.hex}
               a(
-                class="grid-item__download-button grid-item__button"
+                class="grid-item__button"
                 href=`./icons/${icon.slug}.svg`
                 role="button"
                 data-icon=`${icon.slug}`
