refactorings for Eric's comments on the PR

--- a/public/index.pug
+++ b/public/index.pug
@@ -25,7 +25,7 @@ html(lang="en-US")
     link(rel="license" href="license.txt")
     link(rel="canonical" href=pageUrl)
 
-  body(class="no-js order-alphabetically download-type-svg")
+  body(class="no-js order-alphabetically download-svg")
     header(class="header")
       ul(class="header__list")
         li(class="header__list-item")
@@ -78,36 +78,36 @@ html(lang="en-US")
         div(class="control-field")
           label(class="control-field__title") Order
           div(class="control-field__row")
-            button(id="order-alpha" class="padding_large control__button first__button" title="Sort alphabetically" disabled)
+            button(id="order-alpha" class="control__button__padding control__button first__button" title="Sort alphabetically" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="order-alpha")
                 use(href="./images/sprite.svg#order-alpha")
-            button(id="order-color" class="padding_large control__button last__button" title="Sort by color" disabled)
+            button(id="order-color" class="control__button__padding control__button last__button" title="Sort by color" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="order-color")
                 use(href="./images/sprite.svg#order-color")
-            button(id="order-relevance" class="padding_large control__button hidden" title="Sort by relevance" aria-hidden="true" disabled)
+            button(id="order-relevance" class="control__button__padding control__button hidden" title="Sort by relevance" aria-hidden="true" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="order-relevance")
                 use(href="./images/sprite.svg#order-relevance")
         div(class="control-field")
           label(class="control-field__title") Mode
           div(class="control-field__row")
-            button(id="color-scheme-light" class="padding_large control__button first__button" title="Light color scheme" disabled)
+            button(id="color-scheme-light" class="control__button__padding control__button first__button" title="Light color scheme" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="color-scheme-light")
                 use(href="./images/sprite.svg#color-scheme-light")
-            button(id="color-scheme-dark" class="padding_large control__button" title="Dark color scheme" disabled)
+            button(id="color-scheme-dark" class="control__button__padding control__button" title="Dark color scheme" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="color-scheme-dark")
                 use(href="./images/sprite.svg#color-scheme-dark")
-            button(id="color-scheme-system" class="padding_large control__button last__button" title="System color scheme" disabled)
+            button(id="color-scheme-system" class="control__button__padding control__button last__button" title="System color scheme" disabled)
               svg(viewBox="0 0 24 24" aria-labelledby="color-scheme-system")
                 use(href="./images/sprite.svg#color-scheme-system")
         div(class="control-field")
           label(class="control-field__title") Download
           div(class="control-field__row")
-            button(id="download-pdf" class="padding_min control__button first__button control__button__download" title="download PDF" disabled)
-              svg(viewBox="0 0 24 24" aria-labelledby="download-type-svg")
-                use(href="./images/sprite.svg#download-type-pdf")
-            button(id="download-svg" class="padding_min control__button last__button control__button__download" title="download SVG" disabled)
-              svg(viewBox="0 0 24 24" aria-labelledby="download-type-svg")
-                use(href="./images/sprite.svg#download-type-svg")
+            button(id="download-pdf" class="control__button first__button" title="download PDF" disabled)
+              svg(height="34" viewBox="0 0 24 24" aria-labelledby="download-svg")
+                use(href="./images/sprite.svg#download-pdf")
+            button(id="download-svg" class="control__button last__button" title="download SVG" disabled)
+              svg(height="34" viewBox="0 0 24 24" aria-labelledby="download-svg")
+                use(href="./images/sprite.svg#download-svg")
 
       ul(class="grid")
         li(class="grid-item--if-empty hidden" aria-hidden="true")
