addressed Eric's comments

--- a/public/index.pug
+++ b/public/index.pug
@@ -103,10 +103,10 @@ html(lang="en-US")
           label(class="control-field__title") Download
           div(class="control-field__row")
             button(id="download-pdf" class="control__button first__button" title="download PDF" disabled)
-              svg(height="34" viewBox="0 0 24 24" aria-labelledby="download-svg")
+              svg(viewBox="0 0 24 24" aria-labelledby="download-svg")
                 use(href="./images/sprite.svg#download-pdf")
             button(id="download-svg" class="control__button last__button" title="download SVG" disabled)
-              svg(height="34" viewBox="0 0 24 24" aria-labelledby="download-svg")
+              svg(viewBox="0 0 24 24" aria-labelledby="download-svg")
                 use(href="./images/sprite.svg#download-svg")
 
       ul(class="grid")
