--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -229,7 +229,7 @@ a {
   }
 }
 @media (max-width: 640px) {
-  x .header {
+  .header {
     background-color: var(--color-background);
     padding-top: 1rem;
   }
