--- a/public/index.pug
+++ b/public/index.pug
@@ -30,7 +30,7 @@ html(lang="en-US")
         div(class="popup-body") 
           table(class="extensions__table")
             tr
-              td Extensions
+              td Extension
               td Author 
             each ext in extensions
               tr
