--- a/public/index.pug
+++ b/public/index.pug
@@ -155,7 +155,7 @@ html(lang="en-US")
                 class="grid-item__button"
                 href=`./icons/${icon.slug}.svg`
                 role="button"
-                data-icon=`${icon.slug}`
+                data-icon=icon.slug
                 download
               )
                 svg(role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-labelledby="download")
