--- a/public/index.pug
+++ b/public/index.pug
@@ -177,4 +177,4 @@ html(lang="en-US")
       div(class="footer-repo")
           p.
             #[a(title="website repository" href="https://github.com/simple-icons/simple-icons-website") Made with &#10084; on GitHub]
-    input(id="copy-input" class="hidden" aria-hidden="true")
+    input(id="copy-input" class="hidden" aria-hidden="true" tabindex="-1")
