--- a/public/index.pug
+++ b/public/index.pug
@@ -25,7 +25,7 @@ html(lang="en-US")
     link(rel="license" href="license.txt")
     link(rel="canonical" href=pageUrl)
 
-  body(class="no-js order-alphabetically" tabindex="-1")
+  body(class="no-js order-alphabetically")
     div(class="popup_modal popup__top hidden")
         div(class="popup-body") 
           table(class="extensions__table")
