Added 3rd party menu item and corresponding tests (#134)
* added 3rd party menu item and corresponding tests

* Update public/index.pug

this is better, thank you

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

your header styling is fine, thank you for the edit.

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/index.pug

sure

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update tests/e2e.test.js

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update webpack.config.js

sure, as long as it works

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* changed modal border to 0.13rem, added a click handler to body to close modal

* WIP adding tests for modal.js

* Update public/scripts/modal.js

thanks, added the suggestion

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/index.pug

I thought I had committed this already

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

sure

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

sure

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* added unit tests for modal show / hide

* merging after adding tests

* added 3rd party menu item and corresponding tests

* Update public/index.pug

this is better, thank you

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

your header styling is fine, thank you for the edit.

Co-authored-by: Ál

--- a/public/index.pug
+++ b/public/index.pug
@@ -32,6 +32,26 @@ html(lang='en-US')
     link(rel='canonical', href=pageUrl)
 
   body.no-js.order-alphabetically(tabindex='-1')
+    .popup_modal.popup__top.hidden
+      .popup-body 
+        table.extensions__table
+          tr
+            td Extension
+            td Author
+          each ext in extensions
+            tr
+              td 
+                a.link-button(
+                  href=ext.urlModule,
+                  rel='noopener',
+                  target='_blank'
+                ) #{ ext.nameModule }
+              td
+                a.link-button(
+                  href=ext.urlAuthor,
+                  rel='noopener',
+                  target='_blank'
+                ) #{ ext.nameAuthor }
     header.header
       ul.header__list
         li.header__list-item
@@ -125,6 +145,19 @@ html(lang='en-US')
               path(
                 d='m23.9 9.7-3.54-7.89-.005-.01a.542.542 0 0 0-.041-.076l-.014-.018a.533.533 0 0 0-.122-.122l-.015-.011a.528.528 0 0 0-.08-.044l-.024-.009a.527.527 0 0 0-.067-.02l-.028-.007a.524.524 0 0 0-.096-.01h-6.85c-1.02-1.52-1.02-1.54-2 0h-6.86a.543.543 0 0 0-.096.01l-.028.007a.516.516 0 0 0-.067.02l-.024.01a.537.537 0 0 0-.08.043l-.015.011a.51.51 0 0 0-.057.047l-.02.02a.543.543 0 0 0-.045.055l-.014.018a.522.522 0 0 0-.041.075l-.005.01v.001L.116 9.72a.531.531 0 0 0-.096.304c0 2.28 1.86 4.14 4.14 4.14s4.14-1.86 4.14-4.14a.53.53 0 0 0-.096-.304l-3.25-6.37 6.07-.023v18.2c-2.55.294-7.01.381-7 2.5h16c0-2.03-4.48-2.27-7-2.5v-18.1l5.69-.02-2.92 6.49c0 .002 0 .003-.002.005l-.006.018a.545.545 0 0 0-.023.075l-.005.02a.524.524 0 0 0-.01.092v.008c0 2.28 1.86 4.14 4.14 4.14 2.28 0 4.14-1.86 4.14-4.14a.528.528 0 0 0-.12-.332z'
               )
+        li.header__list-item
+          button.header__list-icon.popup-trigger(
+            title='Third-Party Extensions'
+          )
+            svg(
+              role='img',
+              viewBox='0 0 24 24',
+              xmlns='http://www.w3.org/2000/svg'
+            )
+              path(
+                d='M16.513 23.996a.9.9 0 0 0 .885-.907v-4.972c.303-2.68 1.42-1.884 2.734-1.055 3.178 2.003 5.29-3.266 2.72-4.891-2.015-1.276-2.888.917-4.364.69-.57-.088-.967-.72-1.092-1.68V7.59c0-.5-.398-.907-.885-.907h-4.064c-3.355-.436-.377-2.339-.377-4.11C12.072 1.152 10.816 0 9.267 0 7.721 0 6.301 1.152 6.301 2.573c0 1.67 3.082 3.674-.32 4.11H.884A.898.898 0 0 0 0 7.59v3.583c.26 1.528 1.268 1.882 2.559.874.435-.341 1.17-.738 1.7-.738 1.385 0 2.51 1.285 2.51 2.871s-1.123 3.221-2.51 3.221c-.493 0-.954-.164-1.345-.45 0 .121-2.422-2.232-2.914.648v5.494c0 .5.398.907.885.907 2.728 0 5.453 0 8.18-.002.107-.525-.243-1.125-.571-1.646-2.582-4.1 7.463-4.508 4.88.128-.126.228-.253.45-.35.666-.124.27-.206.599-.188.852z'
+              )
+
       h1.header__title Simple Icons
       p.header__description #{ iconCount } Free #[abbr(title='Scalable Vector Graphic') SVG] icons for popular brands
 
