--- a/public/index.pug
+++ b/public/index.pug
@@ -31,7 +31,7 @@ html(lang='en-US')
     link(rel='license', href='license.txt')
     link(rel='canonical', href=pageUrl)
 
-  body.no-js.order-alphabetically(tabindex='-1')
+  body.no-js.order-alphabetically.download-svg(tabindex='-1')
     .popup_modal.popup__top.hidden
       .popup-body 
         table.extensions__table
@@ -157,7 +157,6 @@ html(lang='en-US')
               path(
                 d='M16.513 23.996a.9.9 0 0 0 .885-.907v-4.972c.303-2.68 1.42-1.884 2.734-1.055 3.178 2.003 5.29-3.266 2.72-4.891-2.015-1.276-2.888.917-4.364.69-.57-.088-.967-.72-1.092-1.68V7.59c0-.5-.398-.907-.885-.907h-4.064c-3.355-.436-.377-2.339-.377-4.11C12.072 1.152 10.816 0 9.267 0 7.721 0 6.301 1.152 6.301 2.573c0 1.67 3.082 3.674-.32 4.11H.884A.898.898 0 0 0 0 7.59v3.583c.26 1.528 1.268 1.882 2.559.874.435-.341 1.17-.738 1.7-.738 1.385 0 2.51 1.285 2.51 2.871s-1.123 3.221-2.51 3.221c-.493 0-.954-.164-1.345-.45 0 .121-2.422-2.232-2.914.648v5.494c0 .5.398.907.885.907 2.728 0 5.453 0 8.18-.002.107-.525-.243-1.125-.571-1.646-2.582-4.1 7.463-4.508 4.88.128-.126.228-.253.45-.35.666-.124.27-.206.599-.188.852z'
               )
-
       h1.header__title Simple Icons
       p.header__description #{ iconCount } Free #[abbr(title='Scalable Vector Graphic') SVG] icons for popular brands
 
@@ -260,7 +259,35 @@ html(lang='en-US')
                 path(
                   d='M12 4a1 1 0 0 1-1-1V1a1 1 0 0 1 2 0v2a1 1 0 0 1-1 1zM4.933 6.348a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414l-1.42-1.42a.999.999 0 1 0-1.414 1.414l1.42 1.42zM1 13h2a1 1 0 1 0 0-2H1a1 1 0 0 0 0 2zm19.486-8.072 3.221-3.221A.999.999 0 1 0 22.293.293l-3.221 3.221-1.42 1.42-2.19 2.19A5.955 5.955 0 0 0 12 6c-3.309 0-6 2.691-6 6 0 1.258.406 2.453 1.124 3.462l-2.105 2.105c-.026.021-.058.03-.083.055s-.033.056-.055.082l-1.368 1.368-.001.002-3.219 3.219a.999.999 0 1 0 1.414 1.414l3.987-3.987a10.03 10.03 0 0 0 6.332 2.262c5.103-.001 9.473-3.902 9.951-9.081a1 1 0 0 0-1.591-.896 5.96 5.96 0 0 1-7.037.06l5.717-5.716 1.42-1.421zm-.945 9.78c-1.21 3.337-4.564 5.587-8.257 5.238a8.019 8.019 0 0 1-4.165-1.651l4.802-4.802c.05.038.093.082.144.12a7.955 7.955 0 0 0 7.476 1.095zm-10.979-.684A3.968 3.968 0 0 1 8 12c0-2.206 1.794-4 4-4a3.98 3.98 0 0 1 2.025.561l-5.463 5.463z'
                 )
-
+        .control-field
+          label.control-field__title Download
+          .control-field__row
+            button#download-svg.control__button.first__button(
+              title='download SVG',
+              disabled
+            )
+              svg(
+                role='img',
+                viewBox='0 0 24 24',
+                xmlns='http://www.w3.org/2000/svg',
+                aria-labelledby='download-svg'
+              )
+                path(
+                  d='M4.495 7.746c.487.04 1.387.308 1.387.403 0 .107-.382 1.374-.425 1.424-.025.023-.222-.022-.45-.095-.487-.163-1.38-.28-1.756-.23-.703.084-1.097.415-1.048.863.05.432.314.606 1.645 1.105 1.763.65 2.404 1.317 2.416 2.494.006 1.228-.813 2.12-2.28 2.478-.58.14-1.892.168-2.6.05-.463-.072-1.276-.313-1.381-.397-.037-.04.296-1.475.363-1.553.007-.011.191.05.407.129.814.302 1.861.426 2.52.297.401-.079.771-.381.833-.684.123-.583-.272-.908-1.72-1.413-1.134-.398-1.904-.992-2.194-1.693C.01 10.437.052 9.73.311 9.22c.438-.835 1.405-1.379 2.7-1.508.412-.04.776-.033 1.484.034Zm18.007.084c.58.078 1.19.263 1.19.359 0 .05-.086.386-.197.762-.179.617-.21.673-.32.645-.075-.017-.352-.079-.623-.146-.604-.146-1.794-.174-2.311-.062-1.627.365-2.44 1.688-2.058 3.353.123.56.332.919.739 1.289.635.577 1.67.846 2.662.695l.444-.073V12.87h-1.417v-1.458H24v4.417l-.197.062c-1.701.488-3.747.527-5.097.101a3.912 3.912 0 0 1-1.577-.908c-.93-.841-1.368-2.108-1.196-3.487.259-2.136 1.867-3.543 4.376-3.823.499-.062 1.596-.034 2.193.056zm-13.206.258c.265.75 1.467 4.692 1.645 5.41.111.46.222.829.24.829.02 0 .1-.269.18-.605.147-.606.893-3.016 1.503-4.86l.333-1.01 1.115-.017 1.116-.01-1.535 4.148a344.932 344.932 0 0 1-1.571 4.21c-.025.028-.56.05-1.233.05H9.894l-.277-.774c-.148-.42-.808-2.281-1.455-4.131-.653-1.85-1.202-3.397-1.214-3.436-.025-.05.222-.068 1.11-.068h1.14z'
+                )
+            button#download-pdf.control__button.last__button(
+              title='download PDF',
+              disabled
+            )
+              svg(
+                role='img',
+                viewBox='0 0 24 24',
+                xmlns='http://www.w3.org/2000/svg',
+                aria-labelledby='download-pdf'
+              )
+                path(
+                  d='M17.612 7.239H24l-.006.882-.01.885-2.006.012h-2.01v2.151h3.753v1.751h-3.752v3.841h-2.357V12Zm-7.653.02c.56-.024 1.078-.02 1.545.013.92.062 1.597.221 2.217.522.843.406 1.473 1.03 1.845 1.825.614 1.315.567 3.328-.109 4.661-.793 1.567-2.167 2.308-4.564 2.458-.713.046-2.226-.015-2.79-.11L8 16.61V7.435l.164-.022a22.974 22.974 0 0 1 1.795-.151zm-7.917 0c.687-.019 1.344 0 1.71.053.623.1 1.063.255 1.47.523.834.55 1.271 1.57 1.166 2.703-.078.802-.33 1.392-.8 1.872-.462.47-1.042.759-1.842.918-.301.059-.45.071-1.04.071h-.69l-.007 1.675L2 16.748l-1.002.013H0l.006-4.66.01-4.662.14-.024c.483-.084 1.2-.137 1.886-.157Zm.78 1.62c-.283 0-.57 0-.645.019a.968.968 0 0 0-.162.045c-.018.013-.03.526-.03 1.398v1.38l.117.025c.214.043.937.024 1.148-.03.778-.206 1.19-.774 1.144-1.573-.034-.6-.32-.987-.875-1.186-.158-.059-.263-.071-.697-.078Zm8.244 0a5.62 5.62 0 0 0-.725.015 1.973 1.973 0 0 0-.254.043c-.031.013-.04.651-.04 3.057 0 2.87.002 3.045.055 3.066.096.041 1.188.026 1.417-.021 1.24-.243 2-1.036 2.233-2.329a5.674 5.674 0 0 0 .05-1.389c-.056-.46-.137-.743-.317-1.11-.142-.279-.198-.359-.443-.598-.372-.366-.72-.55-1.29-.68a4.624 4.624 0 0 0-.686-.055z'
+                )
       ul.grid
         li.grid-item--if-empty.hidden(aria-hidden='true')
           p Icon missing? #[a(href='https://github.com/simple-icons/simple-icons/issues/new?labels=new+icon&template=icon_request.yml&title=Request%3A+') Submit a request]
@@ -313,13 +340,17 @@ html(lang='en-US')
               a.grid-item__button(
                 href=`./icons/${icon.slug}.svg`,
                 role='button',
+                data-icon=icon.slug,
                 download
-              ) SVG
-              a.grid-item__button(
-                href=`./icons/${icon.slug}.pdf`,
-                role='button',
-                download
-              ) PDF
+              )
+                svg(
+                  role='img',
+                  xmlns='http://www.w3.org/2000/svg',
+                  viewBox='0 0 24 24'
+                )
+                  path(
+                    d='M11.2 0a.8.8 0 0 0-.8.8v11.4L7.26 9.44a.803.803 0 0 0-1.13.074l-1.05 1.2a.8.8 0 0 0 .073 1.13l6.33 5.54a.795.795 0 0 0 1.05 0l6.32-5.54a.8.8 0 0 0 .074-1.13l-1.05-1.2a.804.804 0 0 0-1.13-.074l-3.14 2.76V.8a.8.8 0 0 0-.8-.8zm-8 20.8a.8.8 0 0 0-.8.8v1.6a.8.8 0 0 0 .8.8h17.6a.8.8 0 0 0 .8-.8v-1.6a.8.8 0 0 0-.8-.8z'
+                  )
     footer.footer
       .footer-description
         p.
