--- a/public/index.pug
+++ b/public/index.pug
@@ -53,6 +53,11 @@ html(lang='en-US')
                   target='_blank'
                 ) #{ ext.nameAuthor }
     header.header
+      label(for='hamburger') &#9776;
+      input#hamburger(type='checkbox')
+      .header__title-container
+        h1.header__title Simple Icons
+        p.header__description #{ iconCount } Free #[abbr(title='Scalable Vector Graphic') SVG] icons for popular brands
       ul.header__list
         li.header__list-item
           a.header__list-icon(
@@ -157,8 +162,6 @@ html(lang='en-US')
               path(
                 d='M16.513 23.996a.9.9 0 0 0 .885-.907v-4.972c.303-2.68 1.42-1.884 2.734-1.055 3.178 2.003 5.29-3.266 2.72-4.891-2.015-1.276-2.888.917-4.364.69-.57-.088-.967-.72-1.092-1.68V7.59c0-.5-.398-.907-.885-.907h-4.064c-3.355-.436-.377-2.339-.377-4.11C12.072 1.152 10.816 0 9.267 0 7.721 0 6.301 1.152 6.301 2.573c0 1.67 3.082 3.674-.32 4.11H.884A.898.898 0 0 0 0 7.59v3.583c.26 1.528 1.268 1.882 2.559.874.435-.341 1.17-.738 1.7-.738 1.385 0 2.51 1.285 2.51 2.871s-1.123 3.221-2.51 3.221c-.493 0-.954-.164-1.345-.45 0 .121-2.422-2.232-2.914.648v5.494c0 .5.398.907.885.907 2.728 0 5.453 0 8.18-.002.107-.525-.243-1.125-.571-1.646-2.582-4.1 7.463-4.508 4.88.128-.126.228-.253.45-.35.666-.124.27-.206.599-.188.852z'
               )
-      h1.header__title Simple Icons
-      p.header__description #{ iconCount } Free #[abbr(title='Scalable Vector Graphic') SVG] icons for popular brands
 
     .sticky-header-shadow(aria-hidden='true')
 
@@ -299,58 +302,6 @@ html(lang='en-US')
           type='text/javascript'
         )
 
-        each icon in icons
-          li.grid-item(
-            style=`--order-color: ${icon.indexByColor}`,
-            data-brand=`${icon.normalizedName}`
-          )
-            .grid-item__row.mv-2.fg-2
-              button.grid-item__preview.copy-button.copy-svg(
-                title=`${icon.title} SVG`,
-                disabled
-              )
-                img.icon-preview(
-                  src=`data:image/svg+xml;base64,${icon.base64Svg}`,
-                  loading='lazy',
-                  alt=`${icon.title} icon`
-                )
-            .grid-item__row
-              if icon.guidelines
-                a.grid-item__link.link-button(
-                  title=`${icon.title} guidelines`,
-                  href=icon.guidelines,
-                  rel='noopener',
-                  target='_blank'
-                ) Brand Guidelines
-              if icon.license
-                a.grid-item__link.link-button.icon-legal(
-                  title=`${icon.title} icon license`,
-                  href=icon.license.url,
-                  rel='noopener',
-                  target='_blank'
-                ) #{ icon.license.type }
-              h2.grid-item__title #{ icon.title }
-            .grid-item__footer
-              button(
-                class=`grid-item__color copy-button copy-color ${icon.light ? "contrast-light" : "contrast-dark"} ${icon.superLight ? "border-light" : ""}  ${icon.superDark ? "border-dark" : ""}`,
-                style=`background-color: #${icon.shortHex}`,
-                title=`${icon.title} color`,
-                disabled
-              ) ##{ icon.hex }
-              a.grid-item__button(
-                href=`./icons/${icon.slug}.svg`,
-                role='button',
-                data-icon=icon.slug,
-                download
-              )
-                svg(
-                  role='img',
-                  xmlns='http://www.w3.org/2000/svg',
-                  viewBox='0 0 24 24'
-                )
-                  path(
-                    d='M11.2 0a.8.8 0 0 0-.8.8v11.4L7.26 9.44a.803.803 0 0 0-1.13.074l-1.05 1.2a.8.8 0 0 0 .073 1.13l6.33 5.54a.795.795 0 0 0 1.05 0l6.32-5.54a.8.8 0 0 0 .074-1.13l-1.05-1.2a.804.804 0 0 0-1.13-.074l-3.14 2.76V.8a.8.8 0 0 0-.8-.8zm-8 20.8a.8.8 0 0 0-.8.8v1.6a.8.8 0 0 0 .8.8h17.6a.8.8 0 0 0 .8-.8v-1.6a.8.8 0 0 0-.8-.8z'
-                  )
     footer.footer
       .footer-description
         p.
