--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -396,7 +396,7 @@ a {
     justify-content: flex-end;
     margin-bottom: 0.5rem;
     position: relative;
-    top: initial;
+    top: -1.2rem;
   }
 }
 
