Implement lazy loading with relative links to icons SVGs

--- a/public/index.pug
+++ b/public/index.pug
@@ -310,7 +310,7 @@ html(lang='en-US')
                 disabled
               )
                 img.icon-preview(
-                  src=`data:image/svg+xml;base64,${icon.base64Svg}`,
+                  src=`icons/${icon.slug}.svg`,
                   loading='lazy',
                   alt=`${icon.title} icon`
                 )
