--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -254,10 +254,12 @@ a {
   cursor: pointer;
   z-index: 100;
 }
+
 /* Extensions */
 .extensions__table {
   font-family: var(--font-family-stylized);
   font-size: 0.9rem;
+  border-radius: var(--border-radius-large);
   border-spacing: 0;
   border-collapse: collapse;
 }
