--- a/public/index.pug
+++ b/public/index.pug
@@ -31,7 +31,7 @@ html(lang='en-US')
     link(rel='license', href='license.txt')
     link(rel='canonical', href=pageUrl)
 
-  body.no-js.order-alphabetically.download-svg(tabindex='-1')
+  body.no-js.order-alpha.download-svg(tabindex='-1')
     .popup_modal.popup__top.hidden
       .popup-body 
         table.extensions__table
