--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -561,7 +561,7 @@ input[type='search']::-ms-reveal {
 }
 
 /* Control - order */
-body.order-alphabetically #order-alpha,
+body.order-alpha #order-alpha,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
